--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,6 @@
 VCS = git
 style = pep440
 versionfile_source = kfai_env/_version.py
-versionfile_build = _version.py
+versionfile_build = kfai_env/_version.py
 tag_prefix =
 parentdir_prefix = kfai_env-
